--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,8 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
+    implementation 'org.json:json:20231013'
+    implementation 'org.bouncycastle:bcprov-jdk15on:1.70'
 
 }
 
